--- a/ProjectDiamondShop/Content/Manager/Site.css
+++ b/ProjectDiamondShop/Content/Manager/Site.css
@@ -40,7 +40,7 @@ html {
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-size: 0.88rem;
+    font-size: 0.875rem;
     user-select: none;
     overflow-x: hidden;
     color: var(--color-dark);
@@ -164,7 +164,7 @@ aside .sidebar {
     }
 
         aside .sidebar a span {
-            font-size: 1.6rem;
+            font-size: 0.9rem; /* Giảm kích thước chữ */
             transition: all 0.3s ease;
         }
 
@@ -538,6 +538,11 @@ main {
         width: 5.6rem;
     }
 
+        aside .sidebar a span.sidebar-text {
+            display: none;
+            font-size: 0.8rem;
+        }
+
         aside .sidebar a:last-child {
             position: relative;
             margin-top: 9rem;
@@ -616,6 +621,10 @@ main {
         width: 100%;
         height: 3.4rem;
     }
+
+        aside .sidebar a span.sidebar-text {
+            display: inline;
+        }
 
         aside .sidebar a:last-child {
             position: absolute;
@@ -1047,7 +1056,6 @@ h3.center-text {
         color: white;
         border-color: #007bff;
     }
-
 
 #paginationForm {
     display: flex;
