--- a/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
+++ b/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
@@ -195,7 +195,7 @@
     <div class="container">
         <div class="header">
             <h2><i class="fa fa-truck"></i> Delivery Staff Orders</h2>
-            <form action="@Url.Action("Logout", "Login")" method="post" style="margin: 0;">
+            <form action="@Url.Action("Logout", "Account")" method="post" style="margin: 0;">
                 <button type="submit" class="logout-button">Logout</button>
             </form>
         </div>
