--- a/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
@@ -45,8 +45,8 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="auth-links">
-                                                <a href="@Url.Action("Index", "Login")" class="link-secondary text-decoration-none">Login</a>
-                                                <a href="@Url.Action("Index", "Login", new { view = "signup" })" class="link-secondary text-decoration-none">Register</a>
+                                                <a href="@Url.Action("Index", "Account")" class="link-secondary text-decoration-none">Login</a>
+                                                <a href="@Url.Action("Index", "Account", new { view = "signup" })" class="link-secondary text-decoration-none">Register</a>
                                             </div>
                                         </div>
                                     </div>
