--- a/ProjectDiamondShop/Views/ForgotPassword/ResetPassword.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/ResetPassword.cshtml
@@ -53,8 +53,8 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-5">
-                                                <a href="@Url.Action("Index", "Login")" class="link-secondary text-decoration-none">Login</a>
-                                                <a href="@Url.Action("Index", "SignUp")" class="link-secondary text-decoration-none">Register</a>
+                                                <a href="@Url.Action("Index", "Account")" class="link-secondary text-decoration-none">Login</a>
+                                                <a href="@Url.Action("Index", "Account")" class="link-secondary text-decoration-none">Register</a>
                                             </div>
                                         </div>
                                     </div>
