--- a/ProjectDiamondShop/Views/Introduce/Princess.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Princess.cshtml
@@ -52,14 +52,14 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")">Logout</a></li>
                             </ul>
                         </li>
                     }
                     else
                     {
                         <li class="nav-item">
-                            <a class="nav-link login-btn" href="@Url.Action("Index", "Login")">Login</a>
+                            <a class="nav-link login-btn" href="@Url.Action("Index", "Account")">Login</a>
                         </li>
                     }
                 </ul>
